src/Bug/bugParser.java
package Bug;
// Generated from .\bug.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class bugParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSIGN=1, PLUS=2, MINUS=3, MULT=4, DIV=5, COMMA=6, SBL=7, SBR=8, PL=9, 
		PR=10, AND=11, OR=12, NOT=13, TRUE=14, FALSE=15, LT=16, GT=17, LE=18, 
		GE=19, EQ=20, NEQ=21, IF=22, ELSE=23, ELIF=24, WHILE=25, END=26, FOR=27, 
		STEP=28, TO=29, PRINT=30, ID=31, INT=32, FLOAT=33, COMMENT=34, NEWLINE=35, 
		WS=36;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_statement = 2, RULE_expression = 3, 
		RULE_expression_b = 4, RULE_expression_a = 5, RULE_print = 6, RULE_assignation = 7, 
		RULE_b_if = 8, RULE_b_while = 9, RULE_b_for = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "statement", "expression", "expression_b", "expression_a", 
			"print", "assignation", "b_if", "b_while", "b_for"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'+'", "'-'", "'*'", "'/'", "','", "'['", "']'", "'('", 
			"')'", "'&&'", "'||'", "'!'", "'true'", "'false'", "'<'", "'>'", "'<='", 
			"'>='", "'=='", "'!='", "'if'", "'else'", "'elif'", "'while '", "'end'", 
			"'for'", "'step'", "'to'", "'print'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASSIGN", "PLUS", "MINUS", "MULT", "DIV", "COMMA", "SBL", "SBR", 
			"PL", "PR", "AND", "OR", "NOT", "TRUE", "FALSE", "LT", "GT", "LE", "GE", 
			"EQ", "NEQ", "IF", "ELSE", "ELIF", "WHILE", "END", "FOR", "STEP", "TO", 
			"PRINT", "ID", "INT", "FLOAT", "COMMENT", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "bug.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public bugParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(bugParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(bugParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(bugParser.NEWLINE, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << PRINT) | (1L << ID))) != 0)) {
				{
				{
				setState(22);
				statement();
				setState(23);
				match(NEWLINE);
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(30);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(bugParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(bugParser.NEWLINE, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << PRINT) | (1L << ID))) != 0)) {
				{
				{
				setState(32);
				statement();
				setState(33);
				match(NEWLINE);
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignationContext assignation() {
			return getRuleContext(AssignationContext.class,0);
		}
		public B_ifContext b_if() {
			return getRuleContext(B_ifContext.class,0);
		}
		public B_whileContext b_while() {
			return getRuleContext(B_whileContext.class,0);
		}
		public B_forContext b_for() {
			return getRuleContext(B_forContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(45);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				assignation();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				b_if();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				b_while();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 4);
				{
				setState(43);
				b_for();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 5);
				{
				setState(44);
				print();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Expression_aContext expression_a() {
			return getRuleContext(Expression_aContext.class,0);
		}
		public Expression_bContext expression_b() {
			return getRuleContext(Expression_bContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expression);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				expression_a(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				expression_b(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expression_bContext extends ParserRuleContext {
		public Expression_bContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_b; }
	 
		public Expression_bContext() { }
		public void copyFrom(Expression_bContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NotExpr_bContext extends Expression_bContext {
		public TerminalNode NOT() { return getToken(bugParser.NOT, 0); }
		public Expression_bContext expression_b() {
			return getRuleContext(Expression_bContext.class,0);
		}
		public NotExpr_bContext(Expression_bContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitNotExpr_b(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EqNeqExpr_aContext extends Expression_bContext {
		public Token op;
		public List<Expression_aContext> expression_a() {
			return getRuleContexts(Expression_aContext.class);
		}
		public Expression_aContext expression_a(int i) {
			return getRuleContext(Expression_aContext.class,i);
		}
		public TerminalNode EQ() { return getToken(bugParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(bugParser.NEQ, 0); }
		public EqNeqExpr_aContext(Expression_bContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitEqNeqExpr_a(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BooleanIdContext extends Expression_bContext {
		public TerminalNode ID() { return getToken(bugParser.ID, 0); }
		public BooleanIdContext(Expression_bContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitBooleanId(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EqNeqExpr_bContext extends Expression_bContext {
		public Token op;
		public List<Expression_bContext> expression_b() {
			return getRuleContexts(Expression_bContext.class);
		}
		public Expression_bContext expression_b(int i) {
			return getRuleContext(Expression_bContext.class,i);
		}
		public TerminalNode EQ() { return getToken(bugParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(bugParser.NEQ, 0); }
		public EqNeqExpr_bContext(Expression_bContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitEqNeqExpr_b(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BooleanTypeContext extends Expression_bContext {
		public Token value;
		public TerminalNode TRUE() { return getToken(bugParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(bugParser.FALSE, 0); }
		public BooleanTypeContext(Expression_bContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitBooleanType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AndExpr_bContext extends Expression_bContext {
		public List<Expression_bContext> expression_b() {
			return getRuleContexts(Expression_bContext.class);
		}
		public Expression_bContext expression_b(int i) {
			return getRuleContext(Expression_bContext.class,i);
		}
		public TerminalNode AND() { return getToken(bugParser.AND, 0); }
		public AndExpr_bContext(Expression_bContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitAndExpr_b(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParentExpr_bContext extends Expression_bContext {
		public TerminalNode PL() { return getToken(bugParser.PL, 0); }
		public Expression_bContext expression_b() {
			return getRuleContext(Expression_bContext.class,0);
		}
		public TerminalNode PR() { return getToken(bugParser.PR, 0); }
		public ParentExpr_bContext(Expression_bContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitParentExpr_b(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompExprContext extends Expression_bContext {
		public Token op;
		public List<Expression_aContext> expression_a() {
			return getRuleContexts(Expression_aContext.class);
		}
		public Expression_aContext expression_a(int i) {
			return getRuleContext(Expression_aContext.class,i);
		}
		public TerminalNode LE() { return getToken(bugParser.LE, 0); }
		public TerminalNode GE() { return getToken(bugParser.GE, 0); }
		public TerminalNode LT() { return getToken(bugParser.LT, 0); }
		public TerminalNode GT() { return getToken(bugParser.GT, 0); }
		public CompExprContext(Expression_bContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitCompExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrExpr_bContext extends Expression_bContext {
		public List<Expression_bContext> expression_b() {
			return getRuleContexts(Expression_bContext.class);
		}
		public Expression_bContext expression_b(int i) {
			return getRuleContext(Expression_bContext.class,i);
		}
		public TerminalNode OR() { return getToken(bugParser.OR, 0); }
		public OrExpr_bContext(Expression_bContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitOrExpr_b(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Expression_bContext expression_b() throws RecognitionException {
		return expression_b(0);
	}

	private Expression_bContext expression_b(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Expression_bContext _localctx = new Expression_bContext(_ctx, _parentState);
		Expression_bContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_expression_b, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				_localctx = new ParentExpr_bContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(52);
				match(PL);
				setState(53);
				expression_b(0);
				setState(54);
				match(PR);
				}
				break;
			case 2:
				{
				_localctx = new NotExpr_bContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(56);
				match(NOT);
				setState(57);
				expression_b(8);
				}
				break;
			case 3:
				{
				_localctx = new CompExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(58);
				expression_a(0);
				setState(59);
				((CompExprContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LT) | (1L << GT) | (1L << LE) | (1L << GE))) != 0)) ) {
					((CompExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(60);
				expression_a(0);
				}
				break;
			case 4:
				{
				_localctx = new EqNeqExpr_aContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(62);
				expression_a(0);
				setState(63);
				((EqNeqExpr_aContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==EQ || _la==NEQ) ) {
					((EqNeqExpr_aContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(64);
				expression_a(0);
				}
				break;
			case 5:
				{
				_localctx = new BooleanTypeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(66);
				((BooleanTypeContext)_localctx).value = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==TRUE || _la==FALSE) ) {
					((BooleanTypeContext)_localctx).value = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 6:
				{
				_localctx = new BooleanIdContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(67);
				match(ID);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(81);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(79);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new EqNeqExpr_bContext(new Expression_bContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression_b);
						setState(70);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(71);
						((EqNeqExpr_bContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==EQ || _la==NEQ) ) {
							((EqNeqExpr_bContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(72);
						expression_b(6);
						}
						break;
					case 2:
						{
						_localctx = new AndExpr_bContext(new Expression_bContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression_b);
						setState(73);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(74);
						match(AND);
						setState(75);
						expression_b(5);
						}
						break;
					case 3:
						{
						_localctx = new OrExpr_bContext(new Expression_bContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression_b);
						setState(76);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(77);
						match(OR);
						setState(78);
						expression_b(4);
						}
						break;
					}
					} 
				}
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Expression_aContext extends ParserRuleContext {
		public Expression_aContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_a; }
	 
		public Expression_aContext() { }
		public void copyFrom(Expression_aContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IntegerIdContext extends Expression_aContext {
		public TerminalNode ID() { return getToken(bugParser.ID, 0); }
		public IntegerIdContext(Expression_aContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitIntegerId(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntegerTypeContext extends Expression_aContext {
		public TerminalNode INT() { return getToken(bugParser.INT, 0); }
		public IntegerTypeContext(Expression_aContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitIntegerType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParentExpr_aContext extends Expression_aContext {
		public TerminalNode PL() { return getToken(bugParser.PL, 0); }
		public Expression_aContext expression_a() {
			return getRuleContext(Expression_aContext.class,0);
		}
		public TerminalNode PR() { return getToken(bugParser.PR, 0); }
		public ParentExpr_aContext(Expression_aContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitParentExpr_a(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NegExpr_aContext extends Expression_aContext {
		public TerminalNode MINUS() { return getToken(bugParser.MINUS, 0); }
		public Expression_aContext expression_a() {
			return getRuleContext(Expression_aContext.class,0);
		}
		public NegExpr_aContext(Expression_aContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitNegExpr_a(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddSubExpr_aContext extends Expression_aContext {
		public Token op;
		public List<Expression_aContext> expression_a() {
			return getRuleContexts(Expression_aContext.class);
		}
		public Expression_aContext expression_a(int i) {
			return getRuleContext(Expression_aContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(bugParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(bugParser.MINUS, 0); }
		public AddSubExpr_aContext(Expression_aContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitAddSubExpr_a(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MultDivExpr_aContext extends Expression_aContext {
		public Token op;
		public List<Expression_aContext> expression_a() {
			return getRuleContexts(Expression_aContext.class);
		}
		public Expression_aContext expression_a(int i) {
			return getRuleContext(Expression_aContext.class,i);
		}
		public TerminalNode MULT() { return getToken(bugParser.MULT, 0); }
		public TerminalNode DIV() { return getToken(bugParser.DIV, 0); }
		public MultDivExpr_aContext(Expression_aContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitMultDivExpr_a(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Expression_aContext expression_a() throws RecognitionException {
		return expression_a(0);
	}

	private Expression_aContext expression_a(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Expression_aContext _localctx = new Expression_aContext(_ctx, _parentState);
		Expression_aContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_expression_a, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PL:
				{
				_localctx = new ParentExpr_aContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(85);
				match(PL);
				setState(86);
				expression_a(0);
				setState(87);
				match(PR);
				}
				break;
			case MINUS:
				{
				_localctx = new NegExpr_aContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(89);
				match(MINUS);
				setState(90);
				expression_a(5);
				}
				break;
			case INT:
				{
				_localctx = new IntegerTypeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(91);
				match(INT);
				}
				break;
			case ID:
				{
				_localctx = new IntegerIdContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(92);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(103);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(101);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						_localctx = new MultDivExpr_aContext(new Expression_aContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression_a);
						setState(95);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(96);
						((MultDivExpr_aContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==MULT || _la==DIV) ) {
							((MultDivExpr_aContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(97);
						expression_a(5);
						}
						break;
					case 2:
						{
						_localctx = new AddSubExpr_aContext(new Expression_aContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression_a);
						setState(98);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(99);
						((AddSubExpr_aContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
							((AddSubExpr_aContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(100);
						expression_a(4);
						}
						break;
					}
					} 
				}
				setState(105);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(bugParser.PRINT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bugVisitor ) return ((bugVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(PRINT);
			setState(107);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
